[package]
name = "bsmart_downloader-rs"
version = "0.1.0"
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "json", "blocking"] }
serde_json = "1.0"
aes = "0.7.5"
block-modes = "0.8.1"
lopdf = "0.27.0"
